--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">MyApp</a>
+        <a class="navbar-brand fw-bold" href="#" style="padding: 20px", >BetView</a>
     </nav>
     <div class="container mt-4">
         {% block content %}{% endblock %}
