Fixed Google OAuth - now redirect user to landing page

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,5 @@
 {% block content %}
 <h1>BetView</h1>
 <p>X</p>
-<button class="btn btn-primary">Get Started</button>
-
+<a href="{{ url_for('get_started')}}" class="btn btn-primary">Get Started</a>
 {% endblock %}
