Major changes - Connected engine to tracker page

--- a/templates/tracker.html
+++ b/templates/tracker.html
@@ -76,6 +76,16 @@
       >
     </div>
 
+    <div>
+      <label for="back_stake">Back Stake:</label>
+      <input 
+        type="number" 
+        step="0.01" 
+        id="back_stake" 
+        name="back_stake" 
+        placeholder="e.g., £10" required
+      >
+    </div>
 
     <div>
       <label for="back_odds">Back Odds:</label>
@@ -84,7 +94,7 @@
         step="0.01" 
         id="back_odds" 
         name="back_odds" 
-        placeholder="Odds at Bookie"
+        placeholder="Odds at Bookie" required
       >
     </div>
 
@@ -96,7 +106,31 @@
         step="0.01" 
         id="lay_odds" 
         name="lay_odds" 
-        placeholder="Odds at Exchange"
+        placeholder="Odds at Exchange" required
+      >
+    </div>
+
+    <div>
+      <label for="back_commission">Back Commission</label>
+      <input 
+        type="number" 
+        step="0.01" 
+        id="back_commission" 
+        name="back_commission" 
+        placeholder="Back Commission"
+        value = 0
+      >
+    </div>
+
+    <div>
+      <label for="lay_commission">Lay Commission</label>
+      <input 
+        type="number" 
+        step="0.01" 
+        id="lay_commission" 
+        name="lay_commission" 
+        placeholder="Lay Commission"
+        value = 0
       >
     </div>
     <button type="submit" name="action" value="add_bet" class="btn-add">Add Bet</button>
@@ -109,14 +143,13 @@
     <thead>
       <tr>
         <th>Date</th>
-        <th>Bookie</th>
-        <th>Back Odds</th>
-        <th>Back Stake</th>
-        <th>Lay Odds</th>
-        <th>Lay Stake</th>
-        
-        <th>Exchange</th>
         <th>Event</th>
+        <th>Bookie</th>
+        <th>Back Stake</th>
+        <th>Back Odds</th>
+        <th>Lay Stake</th>
+        <th>Lay Odds</th>
+        <th>Exchange</th>
         <th>Bet Type</th>
         <th>Bookie P/L</th>
         <th>Exchange P/L</th>
@@ -128,13 +161,13 @@
       {% for bet in bets %}
       <tr>
         <td>{{ bet.bet_date }}</td>
-        <td>{{ bet.bookie }}</td>
-        <td>{{ bet.back_odds}} </td>
-        <td>{{ bet.back_stake}} </td>
-        <td>{{ bet.lay_odds}} </td>
-        <td>{{ bet.lay_stake}} </td>
-        <td>{{ bet.exchange }}  </td>
         <td>{{ bet.event}}</td>
+        <td>{{ bet.bookie }}</td>
+        <td>£{{ bet.back_stake}} </td>
+        <td>{{ bet.back_odds}} </td>
+        <td>£{{ bet.lay_stake}} </td>
+        <td>{{ bet.lay_odds}} </td>
+        <td>{{ bet.exchange }}  </td>
         <td class="{% if bet.bet_type == 'Qualifying' %}qualifying
         {% elif bet.bet_type == 'Free' %} free
         {% elif bet.bet_type == 'Arb' %} arb
